DD#0000: fix: lower h1 size on mobile

--- a/src/components/site.css
+++ b/src/components/site.css
@@ -37,3 +37,9 @@ h3 {
 p {
 
 }
+
+@media screen and (max-width: 500px) {
+    h1 {
+        font-size: 3rem;
+    }
+}
